Update to the latest version 23.1.6

--- a/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window.razor
@@ -7,6 +7,7 @@
 <DialogsAndWindows_Window_ShowOptions />
 <DialogsAndWindows_Window_Resizing />
 <DialogsAndWindows_Window_Dragging />
+<DialogsAndWindows_Window_Multiple />
 
 @code {
     DemoScriptLoader scrollable;
