--- a/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/Index.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/Index.razor
@@ -25,7 +25,7 @@
 
 <div class="demo-products demo-products-description theme-@Themes.ActiveTheme.Name.Replace(" ", "-")">
     <h1 class="mb-4">DevExpress UI Components for Blazor</h1>
-    <p>The <a href="https://www.devexpress.com/blazor/" target="_blank">DevExpress Blazor UI component suite</a> ships with a comprehensive suite of native Blazor components (including a DataGrid, Scheduler, Chart, Data Editors, Rich Text Editor, and Reporting). To learn more about the capabilities of our Blazor UI controls (for both Blazor Server and Blazor WebAssembly), select a product from the list below. DevExpress Blazor UI controls ship as part of the DevExpress ASP.NET Subscription.</p>
+    <p>The <a href="https://www.devexpress.com/blazor/" target="_blank">DevExpress Blazor UI component suite</a> ships with a comprehensive suite of native Blazor components (including a DataGrid, Scheduler, Chart, Data Editors, Rich Text Editor, and Reporting). To learn more about the capabilities of our Blazor UI suite (for both Blazor Server and Blazor WebAssembly), select a product from the list below. DevExpress Blazor UI controls ship as part of the DevExpress ASP.NET Subscription.</p>
     <p>Should you have any questions about the products listed herein or are considering our UI components for an upcoming Blazor project, please email <a href="mailto:info@devexpress.com" tabindex="-1">info@devexpress.com</a>. We will be happy to follow-up.</p>
     <div class="row mb-3">
         @foreach(var info in Configuration.Products) {
