--- a/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/Navigation/Menu/Navigation-Menu-Overview.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/Navigation/Menu/Navigation-Menu-Overview.razor
@@ -8,7 +8,7 @@
                             <Items>
                                 <DxMenuItem Text="News">
                                     <Items>
-                                        <DxMenuItem Text="Explore our newest features" NavigateUrl="https://www.devexpress.com/support/versions.xml#version-history" />
+                                        <DxMenuItem Text="Explore our newest features" NavigateUrl="https://www.devexpress.com/support/versions.xml#major" />
                                         <DxMenuItem Text="Website news" NavigateUrl="https://www.devexpress.com/aboutus/newsreviews/" />
                                     </Items>
                                 </DxMenuItem>
