Update to the latest version 23.1.6

--- a/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window-Multiple.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window-Multiple.razor
@@ -1,56 +1,73 @@
-﻿<DemoPageSectionComponent Id="DialogsAndWindows-Window-Multiple" ShowSizeMode="true">
+﻿@inherits OwningComponentBase
+
+<DemoPageSectionComponent Id="DialogsAndWindows-Window-Multiple" ShowSizeMode="true">
     <ChildContentWithParameters Context="Params">
-        @using BlazorDemo.Data.Homes
-        @using DevExpress.Blazor.Internal
-        @inject HomesDataService HomesDataService
+        @*BeginHide*@
+        @code {
+            IHomesDataProvider homeDataProvider;
 
-        <div class="d-flex justify-content-center p-3">
-            <DxButton RenderStyle="ButtonRenderStyle.Secondary"
-                      Click="ToggleWindowsVisibility">
-                @GetButtonText()
-            </DxButton>
-        </div>
-
-        @for (int i = 0; i < homes.Count; i++) {
-            var home = homes[i];
-            var index = i;
-
-            <DxWindow @ref="windows[index]"
-                      AllowDrag=true
-                      ShowCloseButton=true
-                      HeaderText="@("Home #" + (index + 1))"
-                      Width="@($"min({width}px, 50vw)")"
-                      Height="@($"min({height}px, 65vh)")"
-                      Closed="@(args => OnWindowClose(index))">
-                <BodyContentTemplate>
-                    <div class="m-3">
-                        <div class="w-100">
-                            <img src="@(StaticAssetUtils.GetImagePath(home.PhotoUrl))" class="w-100"/>
-                        </div>
-                        <h5 class="mt-3 font-weight-600" style="">$@home.Price</h5>
-                        <div class="mt-3">
-                            <p class="mt-2 mb-0">
-                                <span class="text-muted">Size:</span>
-                                <span class="fw-bold">@home.HouseSize</span>
-                                <span class="text-muted">ft2</span>
-                            </p>
-                            <p class="mt-2 mb-0">
-                                <span class="text-muted">Year: </span>
-                                <span class="fw-bold">@home.YearBuilt</span>
-                            </p>
-                            <p class="mt-2 mb-0">
-                                <span class="text-muted">Address: </span>
-                                <span class="fw-bold">@home.Address</span>
-                            </p>
-                            <p class="mt-2 mb-0">
-                                <span class="text-muted">@home.Features</span>
-                            </p>
-                        </div>
-                    </div>
-                </BodyContentTemplate>
-            </DxWindow>
+            protected override void OnInitialized()
+            {
+                homeDataProvider = ScopedServices.GetRequiredService<IHomesDataProvider>();
+                base.OnInitialized();
+            }
         }
+        @*EndHide*@
 
+        <DataProviderAccessAreaContainer DataProvider="homeDataProvider">
+            @using BlazorDemo.Data.Homes
+            @using DevExpress.Blazor.Internal
+            @inject HomesDataService HomesDataService
+
+            <div class="d-flex justify-content-center p-3">
+                <DxButton RenderStyle="ButtonRenderStyle.Secondary"
+                          Click="ToggleWindowsVisibility">
+                    @GetButtonText()
+                </DxButton>
+            </div>
+
+            @for (int i = 0; i < homes.Count; i++)
+            {
+                var home = homes[i];
+                var index = i;
+
+                <DxWindow @ref="windows[index]"
+                          AllowDrag=true
+                          ShowCloseButton=true
+                          HeaderText="@("Home #" + (index + 1))"
+                          Width="@($"min({width}px, 50vw)")"
+                          Height="@($"min({height}px, 65vh)")"
+                          Closed="@(args => OnWindowClose(index))">
+                    <BodyContentTemplate>
+                        <div class="m-3">
+                            <div class="w-100">
+                                <img src="@(StaticAssetUtils.GetImagePath(home.PhotoUrl))" class="w-100"/>
+                            </div>
+                            <h5 class="mt-3 font-weight-600" style="">$@home.Price</h5>
+                            <div class="mt-3">
+                                <p class="mt-2 mb-0">
+                                    <span class="text-muted">Size:</span>
+                                    <span class="fw-bold">@home.HouseSize</span>
+                                    <span class="text-muted">ft2</span>
+                                </p>
+                                <p class="mt-2 mb-0">
+                                    <span class="text-muted">Year: </span>
+                                    <span class="fw-bold">@home.YearBuilt</span>
+                                </p>
+                                <p class="mt-2 mb-0">
+                                    <span class="text-muted">Address: </span>
+                                    <span class="fw-bold">@home.Address</span>
+                                </p>
+                                <p class="mt-2 mb-0">
+                                    <span class="text-muted">@home.Features</span>
+                                </p>
+                            </div>
+                        </div>
+                    </BodyContentTemplate>
+                </DxWindow>
+            }
+
+        </DataProviderAccessAreaContainer>
     </ChildContentWithParameters>
 
     @code {
@@ -63,20 +80,24 @@
         bool windowVisible;
         string GetButtonText() => !windowVisible ? "SHOW THE WINDOWS" : "CLOSE THE WINDOWS";
 
-        protected override async Task OnInitializedAsync() {
+        protected override async Task OnInitializedAsync()
+        {
             homes = (await HomesDataService.GetHomesAsync()).Take(3).ToList();
             visibilities = homes.Select(x => windowVisible).ToList();
         }
 
-        private async Task ToggleWindowsVisibility(MouseEventArgs args) {
+        private async Task ToggleWindowsVisibility(MouseEventArgs args)
+        {
             windowVisible = !windowVisible;
 
-            if (windowVisible) {
+            if (windowVisible)
+            {
                 for (int i = 0; i < windows.Count; i++)
                     await windows[i].ShowAtAsync(
                         args.ClientX + i * 30 - width / 2, args.ClientY + i * 30 - height * 2 / 3);
             }
-            else {
+            else
+            {
                 foreach (var window in windows.Values)
                     await window.CloseAsync();
             }
@@ -84,7 +105,8 @@
             visibilities = visibilities.Select(x => windowVisible).ToList();
         }
 
-        private void OnWindowClose(int index) {
+        private void OnWindowClose(int index)
+        {
             visibilities[index] = false;
             windowVisible = visibilities.Any(x => x);
         }
