--- a/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window.razor
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/Pages/DialogsAndWindows/Window/DialogsAndWindows-Window.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Window"
-@layout DataProviderAccessArea<INwindDataProvider>
+@layout DataProviderAccessArea<INwindDataProvider, IHomesDataProvider>
 @using DevExpress.Blazor.Popup.Internal
 <DemoScriptLoader @ref=@scrollable Src="_content/BlazorDemo/lib/scrollable.js" />
 
